--- a/todayWidget/en.lproj/InfoPlist.strings
+++ b/todayWidget/en.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
 /* Display name and description for this extension. */
-"CFBundleDisplayName" = "todayWidget";
+"CFBundleDisplayName" = "tTranslator";
 "com.apple.notificationcenter.widget.description" = "Sample description";
 
