--- a/todayWidget/en.lproj/InfoPlist.strings
+++ b/todayWidget/en.lproj/InfoPlist.strings
@@ -1,4 +1,3 @@
 /* Display name and description for this extension. */
-"CFBundleDisplayName" = "tTranslator";
-"com.apple.notificationcenter.widget.description" = "Sample description";
+"CFBundleDisplayName" = "Swipe Translate";
 
