--- a/Widget/en.lproj/InfoPlist.strings
+++ b/Widget/en.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
 /* Display name and description for this extension. */
-"CFBundleDisplayName" = "Widget";
+"CFBundleDisplayName" = "Swipe Translate";
 "com.apple.notificationcenter.widget.description" = "Sample description";
 
